--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "Xatv68fvFTE2",
         "colab_type": "code",
-        "outputId": "f16831b0-5da7-4f94-a159-7a20de65dbc0",
+        "outputId": "c69e65c3-3a5c-48fc-944f-84a13b526478",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -219,7 +219,7 @@
         "bs = BeautifulSoup(html, \"html.parser\")\n",
         "print(bs)"
       ],
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +352,7 @@
       "metadata": {
         "id": "yYpur5TGMJ_v",
         "colab_type": "code",
-        "outputId": "302b98b0-840f-4fd6-eb4f-20c218de7a43",
+        "outputId": "e4e4a124-768f-468b-9826-feca2a8052e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -362,7 +362,7 @@
         "#all div of the page\n",
         "print(bs.div)"
       ],
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +444,7 @@
       "metadata": {
         "id": "A05dwf51s3Bi",
         "colab_type": "code",
-        "outputId": "772b88d9-17f3-43cd-84f4-319581ecb571",
+        "outputId": "58fb6389-af19-4afa-a2b5-3cdd91bc4dca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -454,7 +454,7 @@
         "#all paragraph of the page\n",
         "print(bs.p)"
       ],
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +474,7 @@
       "metadata": {
         "id": "XhfLrpbzKER-",
         "colab_type": "code",
-        "outputId": "949a2a13-b6ab-4811-9837-13a5c6f4337e",
+        "outputId": "0e54a987-506d-41af-92bc-c6ed00e8ca87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -486,7 +486,7 @@
         "for paragraph in paragraphs.find_all('p'):\n",
         "    print(paragraph.text)"
       ],
-      "execution_count": 29,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +506,7 @@
       "metadata": {
         "id": "VGj72p3_s5Xz",
         "colab_type": "code",
-        "outputId": "4487e48b-8aa4-4fcd-8032-3f7e78835d87",
+        "outputId": "b517756b-b163-48d8-ad0b-1d23b2a7c529",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -516,7 +516,7 @@
         "#all header 1 of the page\n",
         "print(bs.h1)"
       ],
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
       "metadata": {
         "id": "Be1gzMTFFTE8",
         "colab_type": "code",
-        "outputId": "93f54177-00ea-4847-86c2-b71722ea0e09",
+        "outputId": "ff2f6dc4-99d2-4846-f555-697312f202a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -543,7 +543,7 @@
         "titles = bs.find_all(['h1', 'h2','h3','h4','h5','h6'])\n",
         "print([title for title in titles])\n"
       ],
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
       "metadata": {
         "id": "fUDI2PfDFTE5",
         "colab_type": "code",
-        "outputId": "cddfc1b1-f68c-4127-d66f-a026f9502694",
+        "outputId": "583cf1da-cdb3-49ae-a081-43be563bdb76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -581,7 +581,7 @@
         "for tag in divList:\n",
         "    print(tag.get_text())"
       ],
-      "execution_count": 32,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +602,7 @@
       "metadata": {
         "id": "cwrjfr3kFTFA",
         "colab_type": "code",
-        "outputId": "222a5b94-c5ae-450d-ccae-7bdc61118f5f",
+        "outputId": "e5b70b6c-37d2-451f-9b73-e55603cd25e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -612,7 +612,7 @@
         "boldText = bs.find_all('span', {'class':'excitingNote'})\n",
         "print([text for text in boldText])"
       ],
-      "execution_count": 33,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +628,7 @@
       "metadata": {
         "id": "9gSSezrXFTFE",
         "colab_type": "code",
-        "outputId": "6b2d5c0e-8862-4de4-98f8-6514b6e76d7f",
+        "outputId": "b2ece3a9-4524-4f3b-cca1-1e472700ea55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 190
@@ -638,7 +638,7 @@
         "row = bs.find_all(id='gift5', class_='gift')\n",
         "print([text for text in row])"
       ],
-      "execution_count": 34,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,7 +682,7 @@
       "metadata": {
         "id": "Ghel7yQOGBpR",
         "colab_type": "code",
-        "outputId": "4f4474a3-9839-4e81-d619-b2d4426a7a31",
+        "outputId": "7e89e089-8ed2-4d7d-9de2-6c8bdcf3a4ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
@@ -693,16 +693,17 @@
         "out_filename = \"file.csv\"\n",
         "# header of csv file to be written\n",
         "headers = \"exciting Note, image  \\n\"\n",
-        "allRows = bs.find_all('span', {'class':'excitingNote'})\n",
-        "print(allRows)\n",
+        "# for rows scarp the exciting Notes (blod text) and images\n",
+        "allNotes = bs.find_all('span', {'class':'excitingNote'})\n",
+        "print(allNotes)\n",
         "images= bs.find_all('img', {'src':re.compile('\\.\\.\\/img\\/gifts/img.*\\.jpg')})\n",
         "print(images)\n",
-        "img=[]\n",
+        "imgs=[]\n",
         "for image in images: \n",
-        "    img.append(image['src'])\n",
-        "print(img)"
+        "    imgs.append(image['src'])\n",
+        "print(imgs)"
       ],
-      "execution_count": 35,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,13 +729,13 @@
         "f.write(headers)\n",
         "# loops \n",
         "i=0\n",
-        "for value in allRows:\n",
-        "    row = value.get_text()\n",
+        "for value in allNotes:\n",
+        "    note = value.get_text()\n",
         "    #Parse it if that's necessary\n",
-        "    row = row.replace(',', '')\n",
-        "    imgs=img[i]\n",
+        "    note = note.replace(',', '')\n",
+        "    img=imgs[i]\n",
         "    # write to file\n",
-        "    f.write(row +\", \" + imgs +\"\\n\")\n",
+        "    f.write(note +\", \" + img +\"\\n\")\n",
         "    #increase i\n",
         "    i=i+1\n",
         "f.close()  # Close the file"
@@ -747,7 +748,7 @@
       "metadata": {
         "id": "E2Xhv43VjrOJ",
         "colab_type": "code",
-        "outputId": "0827dceb-c79a-4db2-a5b1-eafbbba0d7ee",
+        "outputId": "6103e1e4-7e1c-4b5e-e048-1d79fc5c8d30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -757,7 +758,7 @@
         "#show the file\n",
         "!cat file.csv"
       ],
-      "execution_count": 37,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,7 +789,7 @@
       "metadata": {
         "id": "idIXfBGIHboe",
         "colab_type": "code",
-        "outputId": "bcd6336e-d59f-458d-a3af-0477d4631f9c",
+        "outputId": "86c4a6d0-5540-4406-9957-3d6a99b925b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -799,7 +800,7 @@
         "df = pd.read_csv(out_filename)\n",
         "df.head()"
       ],
-      "execution_count": 38,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -869,7 +870,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 39
         }
       ]
     },
@@ -946,16 +947,16 @@
       "metadata": {
         "id": "3AMGcMO1nQXz",
         "colab_type": "code",
+        "outputId": "a10a01d7-a2a7-4a35-8f69-d7698a4b66d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "aed08f40-9472-412e-b16c-f911c233c6c4"
+        }
       },
       "source": [
         "print(data)"
       ],
-      "execution_count": 41,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,18 +972,18 @@
       "metadata": {
         "id": "nRLi-OgTnJBd",
         "colab_type": "code",
+        "outputId": "081b235d-d839-4d09-a4cc-cfe66c0318e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "c4fb8434-db1e-4489-907b-0be80936a30b"
+        }
       },
       "source": [
         "# Create a Data Fram \n",
         "data = pd.DataFrame(data, columns=headings)\n",
         "data.head() # show how it's look"
       ],
-      "execution_count": 42,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1067,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 43
         }
       ]
     },
@@ -1099,18 +1100,18 @@
       "metadata": {
         "id": "gn4S4lhvYC14",
         "colab_type": "code",
+        "outputId": "73b4d8d7-dd1f-4eeb-9f2f-ae7f82d7f13f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "c9aac90d-1be8-446c-e60a-66dad67ed62e"
+        }
       },
       "source": [
         "# some preprocessing for the heading columns\n",
         "data = data.rename(columns=lambda x: x.replace('\\n','').replace(',','')) \n",
         "data.head() "
       ],
-      "execution_count": 43,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1194,7 +1195,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 44
         }
       ]
     },
@@ -1203,11 +1204,11 @@
       "metadata": {
         "id": "wbiY8ZPLYojd",
         "colab_type": "code",
+        "outputId": "7846b194-bb92-4ff8-ceea-eabd9de07a24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "2305a2ef-862c-4e30-b606-6393737a1ffd"
+        }
       },
       "source": [
         "# some preprocessing for the rest rows\n",
@@ -1219,7 +1220,7 @@
         "data = data.drop('Image',axis=1)\n",
         "data.head()"
       ],
-      "execution_count": 44,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1297,7 +1298,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 45
         }
       ]
     },
@@ -1330,17 +1331,17 @@
       "metadata": {
         "id": "lxIuvDvTlUR7",
         "colab_type": "code",
+        "outputId": "538828ae-5c56-4255-89fe-54f6e405baa9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "b02db878-14ed-4d84-f1c3-484cec99bee6"
+        }
       },
       "source": [
         "#show the file\n",
         "!cat file2.csv"
       ],
-      "execution_count": 46,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -1419,18 +1420,18 @@
       "metadata": {
         "id": "hiYYTEGe8eZ5",
         "colab_type": "code",
+        "outputId": "276e755e-ae65-4407-87d8-acec88e4adba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "ca486882-833f-4874-b18f-3f53eee8e4a0"
+        }
       },
       "source": [
         "# reach to the price from the nearest image to it\n",
         "price = bs.find('img', {'src':'../img/gifts/img1.jpg'}).parent.previous_sibling.get_text()\n",
         "print(price)"
       ],
-      "execution_count": 48,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -1448,46 +1449,15 @@
       "metadata": {
         "id": "4IIblIBdFTFT",
         "colab_type": "code",
+        "outputId": "967300ad-e15d-42ac-b6f2-49d164a0a000",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "04693fc4-b7b8-4018-f49f-1fdb8ca25b5d"
+        }
       },
       "source": [
         "# get the tags with certain text\n",
         "bs.find_all(lambda tag: tag.get_text() == 'Or maybe he\\'s only resting?')"
-      ],
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[<span class=\"excitingNote\">Or maybe he's only resting?</span>]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 49
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rIvcebZDFTFX",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c6e33c96-3725-4921-e2b2-ffd3b77dd827"
-      },
-      "source": [
-        "# Search about certain text\n",
-        "bs.find_all('', text='Or maybe he\\'s only resting?')"
       ],
       "execution_count": 50,
       "outputs": [
@@ -1495,7 +1465,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[\"Or maybe he's only resting?\"]"
+              "[<span class=\"excitingNote\">Or maybe he's only resting?</span>]"
             ]
           },
           "metadata": {
@@ -1508,20 +1478,51 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2h-fleu1FTFC",
+        "id": "rIvcebZDFTFX",
         "colab_type": "code",
+        "outputId": "cb76fc96-2794-4b62-9a29-b21d7844d323",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f24e638f-22a0-4f5e-9771-ddfcaba0f086"
+        }
+      },
+      "source": [
+        "# Search about certain text\n",
+        "bs.find_all('', text='Or maybe he\\'s only resting?')"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[\"Or maybe he's only resting?\"]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2h-fleu1FTFC",
+        "colab_type": "code",
+        "outputId": "a889137b-bb97-4cf8-ebf3-a84de7368c9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "#Find how many this text repeat in the page\n",
         "textList = bs.find_all(text='Now with super-colorful bell peppers!')\n",
         "print(len(textList))"
       ],
-      "execution_count": 51,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
